--- a/src/ProjectIvy.Auth/ProjectIvy.Auth.csproj
+++ b/src/ProjectIvy.Auth/ProjectIvy.Auth.csproj
@@ -23,12 +23,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="4.1.2" />
+    <PackageReference Include="Serilog.Sinks.Graylog" Version="2.2.2" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Microsoft.AspNetCore.Authentication.Facebook" />
     <None Remove="Services\" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
     <None Remove="IdentityServer4.EntityFramework" />
+    <None Remove="Serilog.Sinks.Graylog" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
